# hakkero

./: .gitignore  .gitlab-ci.yml  Cargo.toml  LICENSE  Makefile.toml  README.md  build.sh  flake.nix  rust-toolchain
.cargo/: config
boot/: Cargo.toml
boot/src/: main.rs
nix/: README.md  shell.nix  sources.json
src/: allocator.rs  gdt.rs  interrupts.rs  lib.rs  logger.rs  main.rs  memory.rs  panic.rs  readline.rs  serial.rs  test.rs  vga_buffer.rs
src/allocator/: bump.rs  fixed_size_block.rs  mod.rs
src/arch/: mod.rs
src/arch/aarch64/: asm.rs  link.ld  mod.rs  register.rs  start.S
src/arch/aarch64/board/: mod.rs
src/arch/aarch64/board/raspi3/: mod.rs
src/arch/aarch64/board/virt/: mod.rs
src/arch/aarch64/device/: mod.rs  qemu_console.rs  uart.rs
src/arch/x86_64/: gdt.rs  interrupts.rs  memory.rs  mod.rs
src/arch/x86_64/device/: mod.rs  pic8259.rs  uart16550.rs
src/arch/x86_64/device/vga/: mod.rs
src/arch/x86_64/device/vga/text/: mod.rs  readline.rs
src/arch/x86_64/task/: keyboard.rs  mod.rs
src/common/: logger.rs  mod.rs  once.rs
src/misc/: logger.rs  mod.rs  once.rs
src/task/: executor.rs  keyboard.rs  mod.rs  simple_executor.rs
src/vga/: mod.rs  text.rs  writer.rs
src/vga/text/: mod.rs  readline.rs
targets/: aarch64-hakkero.json
tests/: basic_boot.rs  heap_allocation.rs  readline.rs  should_panic.rs  stack_overflow.rs
