[package]
name = "hakkero"
version = "0.1.0"
authors = ["Yusuf Bera Ertan <y.bera003.06@protonmail.com>"]
edition = "2018"

[[test]]
name = "should_panic"
harness = false

[[test]]
name = "stack_overflow"
harness = false

[dependencies]
bootloader = { version = "^0.9", features = ["map_physical_memory"]}
linked_list_allocator = "^0.8"
log = "^0.4"
pc-keyboard = "^0.5"
pic8259_simple = "^0.2"
spin = "^0.5"
uart_16550 = "^0.2"
vga = "^0.2"
volatile = "^0.2"
x86_64 = "^0.11"

[package.metadata.bootimage]
run-args = [
    "-device", "isa-debug-exit,iobase=0xf4,iosize=0x04", "-serial", "stdio",
]
test-args = [
    "-device", "isa-debug-exit,iobase=0xf4,iosize=0x04", "-serial", "stdio",
    "-display", "none"
]
test-success-exit-code = 33         # (0x10 << 1) | 1

[dependencies.crossbeam-queue]
default-features = false
features = ["alloc"]
version = "^0.2"

[dependencies.futures-util]
default-features = false
features = ["alloc"]
version = "^0.3"

[dependencies.lazy_static]
default-features = false
features = ["spin_no_std"]
version = "^1.4"
