[package]
name = "hakkero"
version = "0.1.0"
authors = ["Yusuf Bera Ertan <y.bera003.06@protonmail.com>"]
edition = "2018"

[workspace]
members = ["boot"]

[[test]]
name = "should_panic"
harness = false

[[test]]
name = "stack_overflow"
harness = false

[profile.dev]
opt-level = 2

[profile.release]
lto = true
incremental = true

[features]
default = ["log_vga", "log_serial"]
log_vga = []
log_serial = []

[dependencies]
linked_list_allocator = "0.9"
log = "0.4"
smallvec = { version = "1.6", features = ["union", "const_generics"] }
smallstr = { version = "0.2", features = ["union"] }
spin = { version = "0.9", features = ["once", "mutex"] }

[dependencies.crossbeam-queue]
default-features = false
features = ["alloc"]
version = "0.3"

[dependencies.futures-util]
default-features = false
features = ["alloc"]
version = "0.3"

# x86_64 specific stuff

[target.'cfg(target_arch = "x86_64")'.dependencies]
bootloader = { git = "https://github.com/yusdacra/bootloader.git", branch = "fix/dependency-detection" }
pc-keyboard = "0.5"
pic8259 = "0.10"
uart_16550 = "0.2"
font8x8 = { version = "0.3", default-features = false, features = ["unicode"] }
x86_64 = "0.14"

[package.metadata.bootloader]
map-physical-memory = true
map-framebuffer = true

